--- a/style.css
+++ b/style.css
@@ -4,21 +4,21 @@ body {
     color: #333;
     font-family: Lato, sans-serif;
 }
-.aaa {
+.centered-main-page-title {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
-.aaa img {
+.centered-main-page-title img {
     width: 100%;
 }
-.aaa .more_inf {
+.centered-main-page-title .more_inf {
     font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.aaa { text-align: center;
+.centered-main-page-title { text-align: center;
 }
 }
 .centered-main-page-element {
@@ -42,7 +42,8 @@ li,
 h3 {
     list-style: none;
 }
-input,button{
+input,
+button{
     outline: none;
 }
 button {
